adjusted font size and margins on animated text on home page edited

--- a/templates/home_page_adam_edit/trips-homepage.html
+++ b/templates/home_page_adam_edit/trips-homepage.html
@@ -20,9 +20,9 @@
           <homepage-navbar></homepage-navbar>
       </div>
   
-      <div class="row position-relative">
+      <div class="row position-relative homepage-main-img">
         <img src="../../images/home_page/main_images/main_page_bg_5.jpg" class="homepage-main-img px-0">
-        <div class="text-center mt-3 position-absolute text-light" id="animated-text">Plan a trip</div>
+        <div class="text-center mt-md-4 mt-3 position-absolute text-light" id="animated-text">Plan a trip</div>
       </div>
   
       <div class="p-3 row d-flex flex-wrap justify-content-center">
