--- a/templates/template.css
+++ b/templates/template.css
@@ -110,11 +110,11 @@ img.homepage-main-img{
     object-fit: cover ;
     object-position: center;
     width: 100%;
-    max-height: 20vh;
+    max-height: calc(5vw + 75px);
     filter: brightness(40%);
 }
 
 div#animated-text{
-    font-size: 3rem;
+    font-size: calc(1.8vw + 30px);
     font-weight: 500;
 }
