Added blur effect to top nav bar

--- a/templates/home_page_adam_edit/trips-homepage.html
+++ b/templates/home_page_adam_edit/trips-homepage.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="container-fluid">
-      <div id="nav">
+      <div id="nav" class="row sticky-top">
           <homepage-navbar></homepage-navbar>
       </div>
   
