--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <div id="nav">
+    <div id="nav" class="row sticky-top">
         <homepage-navbar></homepage-navbar>
     </div>
 
@@ -56,10 +56,7 @@
         </div>
 
         
-        </div>
     </div>
-
-
 
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
     <!-- Font Awesome JS -->
