--- a/templates/template.css
+++ b/templates/template.css
@@ -118,3 +118,8 @@ div#animated-text{
     font-size: calc(1.8vw + 30px);
     font-weight: 500;
 }
+
+.blurred{
+    backdrop-filter: blur(12px);
+    background-color: rgba(255, 255, 255, 0.8);
+}
