Minor edits to navbar component (secondary border removed)

--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-    <div id="nav">
+    <div id="nav" class="row sticky-top">
         <createtrip-navbar></createtrip-navbar>
     </div>
 
