--- a/templates/create_page_adam_edit/create-trip.html
+++ b/templates/create_page_adam_edit/create-trip.html
@@ -21,33 +21,36 @@
 
 </head>
 <body>
-    <div id="nav">
+    <div id="nav" class="row sticky-top">
         <createtrip-navbar></createtrip-navbar>
+    </div>
+
+    <div>
+        <img src="../../images/home_page/main_images/main_page_bg_1.jpg" class="create-trip-main-img position-fixed">
     </div>
 
         <!-- new trip form -->
     <div id="create_get_trip">
-
         <div class="container-md text-dark py-3 position-relative">
             <form action="#">
                 <!-- title -->
                 <div class="row text-center">
-                    <h1 class="fw-bold text-primary p-2">Plan a new trip</h1>
+                    <h1 class="fw-bold p-2 text-light">Plan a new trip</h1>
                 </div>
 
                 <!-- Trip Name -->
                 <div class="row justify-content-center mt-4">
                     <div class="form-floating">
-                        <input type="text" class="form-control" v-model="trip_name" name="trip_name"  placeholder="Trip Name">
-                        <label for="trip_name"><i class="fa-solid fa-suitcase-rolling text-primary mx-2"></i><span style="color: rgb(34, 152, 152); font-weight: bold;"> Trip Name</span></label>
+                        <input type="text" class="form-control blurred-minor" v-model="trip_name" name="trip_name"  placeholder="Trip Name">
+                        <label for="trip_name"><i class="fa-solid fa-suitcase-rolling mx-2"></i> Trip Name</label>
                     </div>
                 </div>
 
                 <!-- where to? -->
                 <div class="row justify-content-center mt-4">
                     <div class="form-floating">
-                        <input type="text" class="form-control" v-model="destination" name="destination_country"  placeholder="country" list="list_all_countries">
-                        <label for="destination_country"><i class="fa-solid fa-plane-departure text-primary mx-2"></i><span style="color: rgb(34, 152, 152); font-weight: bold;"> Where to?</span></label>
+                        <input type="text" class="form-control blurred-minor" v-model="destination" name="destination_country"  placeholder="country" list="list_all_countries">
+                        <label for="destination_country"><i class="fa-solid fa-plane-departure mx-2"></i> Where to?</label>
                     </div>
                 </div>
 
@@ -59,14 +62,14 @@
                 <!-- trip-from date -->         
                 <div class="row justify-content-center">       
                     <div class="form-floating my-3 col">
-                        <input type="date" v-model="sDate" name="start_date" placeholder="Select Date">
-                        <label for="start_date"><i class="fa-regular fa-calendar mx-2"></i> <span style="color: rgb(34, 152, 152);"> Start Date</span></label>
+                        <input type="date" v-model="sDate" name="start_date" placeholder="Select Date" class="blurred-minor">
+                        <label for="start_date"><i class="fa-regular fa-calendar mx-2"></i> Start Date</label>
                     </div>
                 
                     <!-- trip-to date -->                
                     <div class="form-floating my-3 col">
-                        <input type="date" v-model="eDate" name="end_date" placeholder="Select Date">
-                        <label for="end_date"><i class="fa-regular fa-calendar mx-2"></i><span style="color: rgb(34, 152, 152);"> End Date</span></label>
+                        <input type="date" v-model="eDate" name="end_date" placeholder="Select Date" class="blurred-minor">
+                        <label for="end_date"><i class="fa-regular fa-calendar mx-2"></i> End Date</label>
                     </div>
                 </div>
             
@@ -153,8 +156,8 @@
 
 
                     </div>
-                    <div class="p-1 mt-3" style="max-width: 130px;">
-                        <button type="button" @click="create_new_trip()" class="btn btn-primary text-light">Start Planning</button>
+                    <div class="mt-3 text-center">
+                        <button type="button" @click="create_new_trip()" class="btn btn-main">Start Planning</button>
                     </div>
                 </div>
             
@@ -192,7 +195,7 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <!-- Refer to my own external JS -->
-    <script src="homepageNavBar.js"></script>
+    <script src="../pages/homepageNavBar.js"></script>
 
     <!-- access firebase -->
     <script type="module" src="create_get_trip_CRUD_database.js"></script>
