Added gradient blur effect to create trip page

--- a/templates/create_page_adam_edit/create-trip.html
+++ b/templates/create_page_adam_edit/create-trip.html
@@ -35,7 +35,7 @@
             <form action="#">
                 <!-- title -->
                 <div class="row text-center">
-                    <h1 class="fw-bold p-2 text-light">Plan a new trip</h1>
+                    <h1 class="fw-semibold p-2 text-light">Plan a new trip.</h1>
                 </div>
 
                 <!-- Trip Name -->
