--- a/templates/template.css
+++ b/templates/template.css
@@ -126,7 +126,8 @@ div#animated-text{
 
 .blurred-minor{
     backdrop-filter: blur(1px) !important;
-    background-color: rgba(255, 255, 255, 0.5) !important;
+    /* background-color: rgba(255, 255, 255, 0.7) !important; */
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.15)) !important;
     border: 0 !important;
 }
 
