--- a/templates/pages/version1-home,create-pages/trips-homepage.html
+++ b/templates/pages/version1-home,create-pages/trips-homepage.html
@@ -12,34 +12,29 @@
     <link href="../../css/main.min.css" rel="stylesheet">
 
     <title>WAD Travels Project</title>
+
 </head>
 <body>
 
-    <div class="container-fluid">
-      <div id="nav" class="row sticky-top">
-          <homepage-navbar></homepage-navbar>
-      </div>
-  
-      <div class="row position-relative homepage-main-img">
-        <img src="../../images/home_page/main_images/main_page_bg_5.jpg" class="homepage-main-img px-0">
-        <div class="text-center mt-md-4 mt-3 position-absolute text-light" id="animated-text">Plan a trip</div>
-      </div>
-  
-      <div class="p-3 row d-flex flex-wrap justify-content-center">
-  
+    <div id="nav" class="row sticky-top">
+        <homepage-navbar></homepage-navbar>
+    </div>
+
+    <div class="p-3 row d-flex flex-wrap justify-content-center">
+        
         <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
-          <img src="../../images/home_page/trips_imgs/seoul.jpg" class="card-img-top" height="200px">
-          <div class="card-body">
-            <h5 class="card-title">Dec22 Seoul Trip!</h5>
-            <button href="#" class="btn btn-main-bold">Edit Trip</a>
-          </div>
-          <div class="card-footer text-muted">
-            Last edited: 2 days ago
-          </div>
+            <img src="images/seoul.jpg" class="card-img-top" height="200px">
+            <div class="card-body">
+              <h5 class="card-title">Dec22 Seoul Trip!</h5>
+              <button href="#" class="btn btn-main-bold">Edit Trip</a>
+            </div>
+            <div class="card-footer text-muted">
+              Last edited: 2 days ago
+            </div>
         </div>
-  
+
         <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
-          <img src="../../images/home_page/trips_imgs/NYC.jpg" class="card-img-top" height="200px">
+          <img src="images/NYC.jpg" class="card-img-top" height="200px">
           <div class="card-body">
             <h5 class="card-title">June23 New York City</h5>
             <button href="#" class="btn btn-main-bold">Edit Trip</a>
@@ -48,9 +43,9 @@
               Last edited: 3 weeks ago
           </div>
         </div>
-  
+
         <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
-          <img src="../../images/home_page/trips_imgs/interlaken.jpg" class="card-img-top" height="200px">
+          <img src="images/interlaken.jpg" class="card-img-top" height="200px">
           <div class="card-body">
             <h5 class="card-title">June19 Interlaken</h5>
             <button href="#" class="btn btn-fade">View Trip</a>
@@ -59,12 +54,9 @@
               Last edited: 3 years ago
           </div>
         </div>
-  
-  
-      </div>
+
+        
     </div>
-
-
 
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
     <!-- Font Awesome JS -->
@@ -78,8 +70,5 @@
 
     <!-- Refer to my own external JS -->
     <script src="homepageNavBar.js"></script>
-
-    <!-- js import -->
-    <script src="./trips-homepage.js"></script>
 </body>
 </html>
