--- a/templates/pages/version1-home,create-pages/create-trip.html
+++ b/templates/pages/version1-home,create-pages/create-trip.html
@@ -21,36 +21,33 @@
 
 </head>
 <body>
-    <div id="nav" class="row sticky-top">
+    <div id="nav">
         <createtrip-navbar></createtrip-navbar>
-    </div>
-
-    <div>
-        <img src="../../images/home_page/main_images/main_page_bg_1.jpg" class="create-trip-main-img position-fixed">
     </div>
 
         <!-- new trip form -->
     <div id="create_get_trip">
+
         <div class="container-md text-dark py-3 position-relative">
             <form action="#">
                 <!-- title -->
                 <div class="row text-center">
-                    <h1 class="fw-bold p-2 text-light">Plan a new trip</h1>
+                    <h1 class="fw-bold text-primary p-2">Plan a new trip</h1>
                 </div>
 
                 <!-- Trip Name -->
                 <div class="row justify-content-center mt-4">
                     <div class="form-floating">
-                        <input type="text" class="form-control blurred-minor" v-model="trip_name" name="trip_name"  placeholder="Trip Name">
-                        <label for="trip_name"><i class="fa-solid fa-suitcase-rolling mx-2"></i> Trip Name</label>
+                        <input type="text" class="form-control" v-model="trip_name" name="trip_name"  placeholder="Trip Name">
+                        <label for="trip_name"><i class="fa-solid fa-suitcase-rolling text-primary mx-2"></i><span style="color: rgb(34, 152, 152); font-weight: bold;"> Trip Name</span></label>
                     </div>
                 </div>
 
                 <!-- where to? -->
                 <div class="row justify-content-center mt-4">
                     <div class="form-floating">
-                        <input type="text" class="form-control blurred-minor" v-model="destination" name="destination_country"  placeholder="country" list="list_all_countries">
-                        <label for="destination_country"><i class="fa-solid fa-plane-departure mx-2"></i> Where to?</label>
+                        <input type="text" class="form-control" v-model="destination" name="destination_country"  placeholder="country" list="list_all_countries">
+                        <label for="destination_country"><i class="fa-solid fa-plane-departure text-primary mx-2"></i><span style="color: rgb(34, 152, 152); font-weight: bold;"> Where to?</span></label>
                     </div>
                 </div>
 
@@ -62,14 +59,14 @@
                 <!-- trip-from date -->         
                 <div class="row justify-content-center">       
                     <div class="form-floating my-3 col">
-                        <input type="date" v-model="sDate" name="start_date" placeholder="Select Date" class="blurred-minor">
-                        <label for="start_date"><i class="fa-regular fa-calendar mx-2"></i> Start Date</label>
+                        <input type="date" v-model="sDate" name="start_date" placeholder="Select Date">
+                        <label for="start_date"><i class="fa-regular fa-calendar mx-2"></i> <span style="color: rgb(34, 152, 152);"> Start Date</span></label>
                     </div>
                 
                     <!-- trip-to date -->                
                     <div class="form-floating my-3 col">
-                        <input type="date" v-model="eDate" name="end_date" placeholder="Select Date" class="blurred-minor">
-                        <label for="end_date"><i class="fa-regular fa-calendar mx-2"></i> End Date</label>
+                        <input type="date" v-model="eDate" name="end_date" placeholder="Select Date">
+                        <label for="end_date"><i class="fa-regular fa-calendar mx-2"></i><span style="color: rgb(34, 152, 152);"> End Date</span></label>
                     </div>
                 </div>
             
@@ -156,8 +153,8 @@
 
 
                     </div>
-                    <div class="mt-3 text-center">
-                        <button type="button" @click="create_new_trip()" class="btn btn-main">Start Planning</button>
+                    <div class="p-1 mt-3" style="max-width: 130px;">
+                        <button type="button" @click="create_new_trip()" class="btn btn-primary text-light">Start Planning</button>
                     </div>
                 </div>
             
