Removed flight title (was just playing around)

--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -35,7 +35,7 @@
             <form action="#">
                 <!-- title -->
                 <div class="row text-center">
-                    <h1 class="fw-bold p-2 text-light">Plan a new trip</h1>
+                    <h1 class="fw-semibold p-2 text-light">Plan a new trip.</h1>
                 </div>
 
                 <!-- Trip Name -->
@@ -61,22 +61,22 @@
             
                 <!-- trip-from date -->         
                 <div class="row justify-content-center">       
-                    <div class="form-floating my-3 col">
+                    <div class="form-floating mt-4 col-sm-6">
                         <input type="date" v-model="sDate" name="start_date" placeholder="Select Date" class="blurred-minor">
                         <label for="start_date"><i class="fa-regular fa-calendar mx-2"></i> Start Date</label>
                     </div>
                 
                     <!-- trip-to date -->                
-                    <div class="form-floating my-3 col">
+                    <div class="form-floating mt-4 col-sm-6">
                         <input type="date" v-model="eDate" name="end_date" placeholder="Select Date" class="blurred-minor">
                         <label for="end_date"><i class="fa-regular fa-calendar mx-2"></i> End Date</label>
                     </div>
                 </div>
             
                 <!-- collab & submit -->
-                <div class="row justify-content-center">
+                <div class="row justify-content-center mt-4">
                     <div>
-                        <button type="button" class="btn btn-fade" data-bs-toggle="modal" data-bs-target="#exampleModal">+ Add Collaborators</button>
+                        <button type="button" class="btn blurred-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-solid fa-user-group fa-xs"></i> Add Collaborators</button>
                         
                         <p class="text-muted" v-if="nameList.length>0">You have added {{nameList}} </p>
                         <!-- Modal -->
@@ -157,7 +157,7 @@
 
                     </div>
                     <div class="mt-3 text-center">
-                        <button type="button" @click="create_new_trip()" class="btn btn-main">Start Planning</button>
+                        <button type="button" @click="create_new_trip()" class="btn btn-main mt-sm-0 mt-4">Start Planning</button>
                     </div>
                 </div>
             
@@ -195,7 +195,7 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <!-- Refer to my own external JS -->
-    <script src="homepageNavBar.js"></script>
+    <script src="../pages/homepageNavBar.js"></script>
 
     <!-- access firebase -->
     <script type="module" src="create_get_trip_CRUD_database.js"></script>
