nice trip homepage!

--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -52,11 +52,77 @@
         <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
           <img src="../../images/home_page/trips_imgs/interlaken.jpg" class="card-img-top" height="200px">
           <div class="card-body">
-            <h5 class="card-title">June19 Interlaken</h5>
+            <h5 class="card-title">June21 Interlaken</h5>
+            <button href="#" class="btn btn-fade">View Trip</a>
+          </div>
+          <div class="card-footer text-muted">
+              Last edited: 1 year ago
+          </div>
+        </div>
+
+        <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+          <img src="../../images/home_page/trips_imgs/kyoto.jpeg" class="card-img-top" height="200px">
+          <div class="card-body">
+            <h5 class="card-title">Dec20 Kyoto</h5>
+            <button href="#" class="btn btn-fade">View Trip</a>
+          </div>
+          <div class="card-footer text-muted">
+              Last edited: 2 years ago
+          </div>
+        </div>
+
+        <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+          <img src="../../images/home_page/trips_imgs/edinburgh.jpeg" class="card-img-top" height="200px">
+          <div class="card-body">
+            <h5 class="card-title">Aug19 Edinburgh</h5>
             <button href="#" class="btn btn-fade">View Trip</a>
           </div>
           <div class="card-footer text-muted">
               Last edited: 3 years ago
+          </div>
+        </div>
+
+        <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+          <img src="../../images/home_page/trips_imgs/budapest.jpg" class="card-img-top" height="200px">
+          <div class="card-body">
+            <h5 class="card-title">Jan19 Budapest</h5>
+            <button href="#" class="btn btn-fade">View Trip</a>
+          </div>
+          <div class="card-footer text-muted">
+              Last edited: 3 years ago
+          </div>
+        </div>
+
+        <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+          <img src="../../images/home_page/trips_imgs/chang_mai.jpeg" class="card-img-top" height="200px">
+          <div class="card-body">
+            <h5 class="card-title">Sep18 Chiang Mai</h5>
+            <button href="#" class="btn btn-fade">View Trip</a>
+          </div>
+          <div class="card-footer text-muted">
+              Last edited: 4 years ago
+          </div>
+        </div>
+
+        <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+          <img src="../../images/home_page/trips_imgs/bergen.jpg" class="card-img-top" height="200px">
+          <div class="card-body">
+            <h5 class="card-title">Feb18 Bergen</h5>
+            <button href="#" class="btn btn-fade">View Trip</a>
+          </div>
+          <div class="card-footer text-muted">
+              Last edited: 4 years ago
+          </div>
+        </div>
+
+        <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+          <img src="../../images/home_page/trips_imgs/venice.jpg" class="card-img-top" height="200px">
+          <div class="card-body">
+            <h5 class="card-title">Dec17 Venice</h5>
+            <button href="#" class="btn btn-fade">View Trip</a>
+          </div>
+          <div class="card-footer text-muted">
+              Last edited: 5 years ago
           </div>
         </div>
   
