error state feedback without using alerts

--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -63,6 +63,9 @@
                     <div class="d-grid">
                         <button type="button" @click="login()" class="btn btn-primary mb-4">Login</button>
                     </div>
+                    <div class="text-danger" id="error" style="display:none;">
+                        test
+                    </div>
                     <div>
                         <p class="text-center text-muted">or</p>
                         <div class="d-grid">
