Changed accent color

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,17 @@
 //custom colors
-$primary:       #F55B29;
+
+// INITIAL =======================
+// $primary:       #F55B29;
+// $secondary:     #F2C57C;
+// $success:       #37b9a1;
+// $info:          #9ACFE6;
+// $warning:       #dfc939;
+// $danger:        #9D2D08;
+// $light:         #FFFFFF;
+// $dark:          #405559;
+
+//NEW ===========================
+$primary:       #2181BC;
 $secondary:     #F2C57C;
 $success:       #37b9a1;
 $info:          #9ACFE6;
