Changed color scheme and bg color on home page

--- a/sass/backup/backup.scss
+++ b/sass/backup/backup.scss
@@ -12,13 +12,13 @@
 
 //NEW ===========================
 $primary:       #24A19D;
-$secondary:     #77e3b9;
+$secondary:     #6fd1cd;
 $success:       #37b9a1;
 $info:          #9ACFE6;
-$warning:       #FFC759;
+$warning:       #dfc939;
 $danger:        #9D2D08;
 $light:         #ffffff;
-$dark:          #0a4a48;
+$dark:          #405559;
 
 //customer buttons
 $btn-hover-bg-shade-amount:       25%;
