--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -31,7 +31,7 @@
 
         <!-- new trip form -->
     <div id="create_get_trip">
-        <div class="container-md text-dark py-3 position-relative">
+        <div class="container-md text-light py-3 position-relative">
             <form action="#">
                 <!-- title -->
                 <div class="row text-center">
