--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -25,7 +25,7 @@
         <div class="text-center mt-md-4 mt-3 position-absolute text-light" id="animated-text">Plan a trip</div>
       </div>
   
-      <div class="p-3 row d-flex flex-wrap justify-content-center">
+      <div class="p-3 row d-flex flex-wrap justify-content-center bg-dark">
   
         <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
           <img src="../../images/home_page/trips_imgs/seoul.jpg" class="card-img-top" height="200px">
