--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -76,7 +76,7 @@
                 <!-- collab & submit -->
                 <div class="row justify-content-center mt-4">
                     <div>
-                        <button type="button" class="btn blurred-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-solid fa-user-group fa-xs"></i> Add Collaborators</button>
+                        <button type="button" class="btn blurred-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-solid fa-user-group fa-xs"></i>+ Add Collaborators</button>
                         
                         <p class="text-muted">{{friendCollaborators}}</p>
                         <!-- Modal -->
@@ -84,7 +84,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Add your Friends!</h1>
+                                    <h1 class="modal-title fs-5 text-dark" id="exampleModalLabel">Add your Friends!</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
