--- a/templates/pages/signup_login pages/signup_page.html
+++ b/templates/pages/signup_login pages/signup_page.html
@@ -88,6 +88,10 @@
                     </small>
                 </div>
 
+                <div class="text-danger" id="error" style="display:none">
+
+                </div> 
+
                 <div class="d-flex justify-content-center links">
 					Already have an account?&nbsp<a href="login_page.html">Log In</a>
 				</div>
