Polished styling on homepage and create trip page

--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -23,18 +23,20 @@
       }
     </style>
 </head>
-<body>
+<body class="bg-dark">
 
       <div id="nav" class="row sticky-top">
           <homepage-navbar></homepage-navbar>
       </div>
-  
-      <div class="row position-relative homepage-main-img">
+
+      <!-- header -->
+      <div class="row position-relative image_container_homepage">
         <img src="../../images/home_page/main_images/main_page_bg_5.jpg" class="homepage-main-img px-0">
         <div class="text-center mt-md-4 mt-3 position-absolute text-light" id="animated-text">Plan a trip</div>
       </div>
-  
-      <div class="container" style="width:85vw;">
+
+      <!-- body -->
+      <div class="container-fluid">
         <div class="row p-3 d-flex justify-content-center">
           
           <div class="card cardstyle" >
@@ -47,7 +49,7 @@
               Last edited: 2 days ago
             </div>
           </div>
-    
+
           <div class="card cardstyle" >
             <img src="../../images/home_page/trips_imgs/NYC.jpg" class="card-img-top" height="200px">
             <div class="card-body">
