create trip field validation

--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -41,15 +41,14 @@
                 <!-- Trip Name -->
                 <div class="row justify-content-center mt-4">
                     <div class="form-floating">
-                        <input type="text" class="form-control blurred-minor-gradient text-light" v-model="trip_name" name="trip_name"  placeholder="Trip Name">
+                        <input type="text" class="form-control blurred-minor-gradient text-light" v-model="trip_name" name="trip_name"  placeholder="Trip Name" required>
                         <label for="trip_name"><i class="fa-solid fa-suitcase-rolling mx-2"></i> Trip Name</label>
                     </div>
                 </div>
-
                 <!-- where to? -->
                 <div class="row justify-content-center mt-4">
                     <div class="form-floating">
-                        <input type="text" class="form-control blurred-minor-gradient text-light" v-model="destination" name="destination_country"  placeholder="country" list="list_all_countries">
+                        <input type="text" class="form-control blurred-minor-gradient text-light" v-model="destination" name="destination_country"  placeholder="country" list="list_all_countries" required>
                         <label for="destination_country"><i class="fa-solid fa-plane-departure mx-2"></i> Where to?</label>
                     </div>
                 </div>
@@ -62,13 +61,13 @@
                 <!-- trip-from date -->         
                 <div class="row justify-content-center">       
                     <div class="form-floating mt-4 col-sm-6">
-                        <input type="date" v-model="sDate" name="start_date" placeholder="Select Date" class="blurred-minor-gradient text-light">
+                        <input type="date" v-model="sDate" name="start_date" placeholder="Select Date" class="blurred-minor-gradient text-light" required>
                         <label for="start_date"><i class="fa-regular fa-calendar mx-2"></i> Start Date</label>
                     </div>
                 
                     <!-- trip-to date -->                
                     <div class="form-floating mt-4 col-sm-6">
-                        <input type="date" v-model="eDate" name="end_date" placeholder="Select Date" class="blurred-minor-gradient text-light">
+                        <input type="date" v-model="eDate" name="end_date" placeholder="Select Date" class="blurred-minor-gradient text-light" required>
                         <label for="end_date"><i class="fa-regular fa-calendar mx-2"></i> End Date</label>
                     </div>
                 </div>
@@ -159,8 +158,10 @@
                         <button type="button" @click="create_new_trip()" class="btn btn-main mt-sm-0 mt-4">Start Planning</button>
                     </div>
                 </div>
-            
+
             </form>
+
+            
         </div>
     </div>
 
