--- a/templates/pages/signup_login pages/reset_password_page.html
+++ b/templates/pages/signup_login pages/reset_password_page.html
@@ -46,25 +46,32 @@
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header text-primary">
-				<h3>Reset Password</h3>
+				<h3>Reset Password Code</h3>
 			</div>
 			<div class="card-body">
 				<form>
-					<div class="input-group form-group">
+                    <div class="text-muted p-auto mb-2 d-block text-center">
+                        Enter the code sent to your email.
+                    </div>
+					<div class="input-group form-group mb-2">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
-                        <input type="email" class="form-control" v-model="email" name="email" placeholder="Email">
+                        <input type="text" class="form-control" v-model="reset_code" name="reset_code" placeholder="Reset Code">
+                    </div>
+                    <div class="input-group form-group">
+                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        <input type="password" class="form-control" v-model="password" name="password" placeholder="New Password">
                     </div>
 					<br>
 					<!-- <div class="input-group form-group">
 						<span class="input-group-text"><i class="fas fa-key"></i></span>
 						<input type="password" class="form-control" v-model="password" name="password" placeholder="Password">
 					</div> -->
-                    <div class="text-muted p-auto m-auto d-block text-center">
-                        Email sent to {{ email }}
+                    <div class="text-muted p-auto m-auto d-block text-center" id="reset_status" style="display:none;">
+                        Password Successfully Reset
                     </div>
                     <br>
                     <div class="d-grid">
-                        <button type="button" @click="send_reset_email()" class="btn btn-primary mb-4">Send Reset Password Email</button>
+                        <button type="button" @click="reset_password()" class="btn btn-primary mb-4">Reset Password</button>
                     </div>
 					
 				</form>
