Edits to login and reset password

--- a/templates/pages/signup_login pages/reset_password_page.html
+++ b/templates/pages/signup_login pages/reset_password_page.html
@@ -77,10 +77,8 @@
 						<span class="input-group-text"><i class="fas fa-key"></i></span>
 						<input type="password" class="form-control" v-model="password" name="password" placeholder="Password">
 					</div> -->
-                    An email with link
-                    <br>
                     <div class="d-grid">
-                        <button type="button" @click="send_reset_email()" class="btn btn-primary mb-4">Send Reset Password Email</button>
+                        <button type="button" @click="send_reset_email()" class="btn btn-main mb-4">Send Reset Password Email</button>
                     </div>
                 </form>
             </div>
